<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">ADD</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_id">Email Id</string>
    <string name="button_save">Save</string>
    <string name="title_activity_add_contact">AddContact</string>

</resources>
