<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.contacts.AddContact" >

        <EditText android:id="@+id/first_name"
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/first_name" />
        
        <EditText android:id="@+id/last_name"
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/last_name" />
        
        <EditText android:id="@+id/phone_number"
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/phone_number"
        android:inputType="phone" />
        
        <EditText android:id="@+id/email_id"
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email_id" 
        android:inputType="textEmailAddress"/>
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/button_save" 
        android:onClick="sendMessage" />
    
</LinearLayout>
